navbar collapse with additional elements works correctly

--- a/SignRequestExpress/wwwroot/css/site.css
+++ b/SignRequestExpress/wwwroot/css/site.css
@@ -124,19 +124,3 @@ body {
 :-ms-input-placeholder {
     font-style: italic;
 }
-
-/*.navbar-collapse .nav-hiding{
-    display: none;
-}
-
-.navbar-collapse.in .nav-hiding{
-    display: inline-block;
-}*/
-
-.nav-hiding{
-    display: none;
-}
-
-.nav-hiding.collapse{
-    display: inline-block;
-}
